jira/jira-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: jira
  name: jira
  namespace: jira-deployment
spec:
  replicas: 3
  template:
    metadata:
      labels:
        app: jira
      name: jira
    spec:
      containers:
        - name: jira
#          image: "gcr.io/hightowerlabs/jira:7.3.6-standalone"
          image: "atlassian/jira-software"
          resources:
            requests:
              cpu: "2"
              memory: "2G"
          volumeMounts:
            - name: "jira-home"
              mountPath: /opt/jira-home
          volumes:
            - name: "jira-home"
              persistentVolumeClaim:
                claimName: jira-pvc
     
#          volumes:
#        - name: "jira-home"
#          gcePersistentDisk:
#            pdName: jira-home
#           fsType: ext4
